Fix desktop-min-width menu cutoff bug

--- a/app/states/root/_root_styles.scss
+++ b/app/states/root/_root_styles.scss
@@ -43,7 +43,7 @@
 
 	.menu-directive-wrapper
 	{
-		width: 300px !important;
+		width: 350px !important;
 		background-color: transparent !important;
 	}
 
